[package]
name = "reserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
